--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -4,14 +4,14 @@
   position: sticky;
   width: 100%;
   top: 0px;
-  background: white;
+  background: #39796b;
   z-index: 9;
   .title {
     cursor: pointer;
     font-size: 22px;
     font-weight: 700;
     .titleSpan {
-      color: magenta;
+      color: white;
     }
     @media (max-width: 768px) {
       font-size: 18px;
@@ -31,6 +31,13 @@
         @media (max-width: 768px) {
           font-size: 14px;
         }
+      } 
+      .item:hover {
+        font-weight: 500;
+        font: bold;
+        cursor: pointer;
+        text-decoration: underline;
+        color: antiquewhite;
       }
     }
   }
