--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Verdana, sans-serif;
+  font-family: 'Inter', sans-serif;
   box-sizing: border-box;
 }
 
