--- a/styles/Footer.scss
+++ b/styles/Footer.scss
@@ -22,6 +22,9 @@
             font-weight: 700;
         }
     }
+    // @media only screen and (max-width: 600px) {
+    //     width: max-content;
+    //   }
 }
 .fw7{
     font-weight: 700;
