made fit for mobile devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@ a:hover {
   width: fit-content;
   padding: 10px;
   border-radius: 1px;
-  background: whitesmoke;
+  background: white;
   color: #39796b;
   font-weight: 700;
   margin-top: 20px;
