--- a/styles/AdminForm.scss
+++ b/styles/AdminForm.scss
@@ -18,6 +18,9 @@
         margin: 0px 10px;
       }
     }
+    .jcsb {
+      justify-content: space-between;
+    }
     .alignBtnCenter {
       text-align: center;
       .btnOrange {
