--- a/styles/Footer.scss
+++ b/styles/Footer.scss
@@ -1,6 +1,6 @@
 .footer-container{
     background: #D9D9D9;
-    height: 250px;
+    // height: 250px;
     .pa{
         position: absolute;
     }
