--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -1,5 +1,5 @@
 .HeaderContainer {
-  padding: 13px 0px 17px 0px;
+  padding: 10px 0px;
   box-shadow: 5px 3px 5px 0px rgb(0 0 0 / 20%);
   position: sticky;
   width: 100%;
