--- a/styles/AdminForm.scss
+++ b/styles/AdminForm.scss
@@ -20,6 +20,12 @@
     }
     .jcsb {
       justify-content: space-between;
+    } 
+    .jcse {
+      justify-content: space-evenly;
+    }
+    .mr10 {
+      margin-right: 10px;
     }
     .alignBtnCenter {
       text-align: center;
